--- a/style.css
+++ b/style.css
@@ -19,14 +19,16 @@ body {
   height: 100%;
   background: url("./img/back.jpg") center/cover no-repeat;
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 
 .player {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  margin-top: 20px;
 }
 
 .wrapper {
