--- a/style.scss
+++ b/style.scss
@@ -5,14 +5,16 @@ body {
   font-size: 1.6rem;
   height: 100%;
   background: url("./img/back.jpg") center/cover no-repeat;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 .player {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  margin-top: 20px;
 }
 .wrapper {
   border: 2px solid map-get($map: $color, $key: light);
